@@ -81,14 +81,14 @@ BEGIN
     PUSHBUTTON      "Add",IDC_ADD_FOOD,201,20,50,14
     PUSHBUTTON      "Edit...",IDC_EDIT_FOOD,201,37,50,14
     PUSHBUTTON      "Delete",IDC_DELETE_FOOD,201,54,50,14
-    CONTROL         "Tree1",IDC_ITEMCONFIG_ITEMSTREE,"SysTreeView32",
-                    WS_TABSTOP,13,89,185,188,WS_EX_CLIENTEDGE
     PUSHBUTTON      "Add Child",IDC_ADD_ITEM,203,155,50,14
     DEFPUSHBUTTON   "Cancel",IDCANCEL,7,309,50,14
     PUSHBUTTON      "Sort Branch",IDC_ITEM_SORT,203,138,50,14
     PUSHBUTTON      "?",IDC_HELP_INFO,203,240,50,14
     PUSHBUTTON      "All Selected Into New Branch",IDC_SELECTEDTOBRANCH,203,
                     208,50,29,BS_MULTILINE
+    CONTROL         "Tree1",IDC_ITEMCONFIG_ITEMSTREE,"SysTreeView32",
+                    WS_TABSTOP,13,89,185,188,WS_EX_CLIENTEDGE
 END
 
 
